#402: missing prop for tests to work

--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -9,6 +9,8 @@ skills.store.settings.public_groupName1.settingId1=valuea
 skills.store.settings.public_groupName1.settingId2=valueb
 skills.store.settings.public_groupName2.settingId3=valuec
 
+skills.authorization.userInfoUri=
+
 # Uncomment to run against local instance of Postgres
 #spring.datasource.url=jdbc:postgresql://localhost:5432/skills
 #spring.datasource.username=postgres
