#409 unifying back-end/frontend validation configs, updating integration tests to account for new 100 point mininum

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -45,6 +45,8 @@ skills:
   clientLibVersion: @maven.build.timestamp@
   config:
     ui:
+      minimumSubjectPoints: 100
+      minimumProjectPoints: 100
       descriptionMaxLength: 2000
       maxTimeWindowInMinutes: 43200
       docsHost: http://skillsasaservicedocs.com
