#402: graceful shutdown to allow existing requests to complete

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -40,6 +40,8 @@ spring:
             redirectUriTemplate: 'http://localhost:8080/{action}/oauth2/code/{registrationId}'
             iconClass: fab fa-github
 skills:
+  gracefulShutdown:
+    timeoutSecs: 80
   artificialDelay:
     enabled: false
   clientLibVersion: @maven.build.timestamp@
