#410 - enable tomcat access log

--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -21,3 +21,4 @@ skills.authorization.userInfoUri=
 #logging.level.org.hibernate: INFO
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder: TRACE
 
+#server.tomcat.accesslog.enabled=true
