--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -126,6 +126,10 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-access</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.liquibase</groupId>
