#424: improve hot test logs are handled in gitlab

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,9 +14,13 @@ build:
     - echo "<settings><mirrors><mirror><id>central</id><name>central</name><url>http://$NEXUS_SERVER/repository/maven-public/</url><mirrorOf>*</mirrorOf></mirror></mirrors></settings>" > ~/.m2/settings.xml
     - cat ~/.m2/settings.xml
     - mvn install
+    - ls
+    - ls backend/*
+    - lg backend/target/*
   artifacts:
     paths:
       - backend/target/backend-*.jar
+      - backend/target/skills-service-tests.log
 
 postgres-test:on-schedule:
   only:
@@ -35,7 +39,9 @@ postgres-test:on-schedule:
     - echo "<settings><mirrors><mirror><id>central</id><name>central</name><url>http://$NEXUS_SERVER/repository/maven-public/</url><mirrorOf>*</mirrorOf></mirror></mirrors></settings>" > ~/.m2/settings.xml
     - cat ~/.m2/settings.xml
     - mvn test -Dspring.datasource.url=jdbc:postgresql://postgres:5432/skills -Dspring.datasource.username=postgres -Dspring.datasource.password=skillsPassword
-
+  artifacts:
+    paths:
+      - backend/target/skills-service-tests.log
 deploy:
   except:
     variables:
