Revert "#424: improve hot test logs are handled in gitlab - removed standard out log messages"
This reverts commit 66e92463

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,9 @@ build:
     - echo "<settings><mirrors><mirror><id>central</id><name>central</name><url>http://$NEXUS_SERVER/repository/maven-public/</url><mirrorOf>*</mirrorOf></mirror></mirrors></settings>" > ~/.m2/settings.xml
     - cat ~/.m2/settings.xml
     - mvn install
+    - ls
+    - ls backend/*
+    - lg backend/target/*
   artifacts:
     paths:
       - backend/target/backend-*.jar
