--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -182,12 +182,12 @@
                     <artifactId>groovy-all</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
+        </dependency>s
 
         <dependency>
             <groupId>profile</groupId>
             <artifactId>call-stack-profiler</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.1</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
