#410 - up'ed the version of call-stack-profiler-core to 1.0.1

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -182,7 +182,7 @@
                     <artifactId>groovy-all</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>s
+        </dependency>
 
         <dependency>
             <groupId>profile</groupId>
