--- a/skills-bootstrap/pom.xml
+++ b/skills-bootstrap/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>skills-service</artifactId>
         <groupId>skills</groupId>
-        <version>1.0.2-SNAPSHOT</version>
+        <version>1.0.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
