--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,7 +39,8 @@
     "vue-virtual-scroll-list": "1.4.2",
     "vuejs-datepicker": "1.6.2",
     "vuex": "3.1.1",
-    "dompurify": "2.0.3"
+    "dompurify": "2.0.3",
+    "frontend": "1.0.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "3.11.0",
