fixing package.json version update for skills-client-vue

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "@skills/skills-client-vue": "1.0.2",
+    "@skills/skills-client-vue": "1.0.5",
     "@fortawesome/fontawesome-free": "5.11.2",
     "animate.css": "3.7.2",
     "apexcharts": "3.8.6",
@@ -39,8 +39,7 @@
     "vue-virtual-scroll-list": "1.4.2",
     "vuejs-datepicker": "1.6.2",
     "vuex": "3.1.1",
-    "dompurify": "2.0.3",
-    "frontend": "1.0.5"
+    "dompurify": "2.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "3.11.0",
