--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -161,7 +161,6 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <scope>runtime</scope>
         </dependency>
 
         <dependency>
@@ -362,6 +361,30 @@
                                     </includes>
                                 </resource>
                             </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>com.github.eirslett</groupId>
+                <artifactId>frontend-maven-plugin</artifactId>
+                <version>${frontend-maven-plugin.version}</version>
+
+                <configuration>
+                    <installDirectory>${project.parent.basedir}/frontend/target</installDirectory>
+                    <workingDirectory>${project.parent.basedir}/frontend</workingDirectory>
+                </configuration>
+
+                <executions>
+                    <execution>
+                        <id>npm run test:cypress</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        <phase>test</phase>
+                        <configuration>
+                            <arguments>run test:cypress</arguments>
                         </configuration>
                     </execution>
                 </executions>
