--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -366,39 +366,39 @@
                 </executions>
             </plugin>
 
-            <plugin>
-                <groupId>com.github.eirslett</groupId>
-                <artifactId>frontend-maven-plugin</artifactId>
-                <version>${frontend-maven-plugin.version}</version>
+<!--            <plugin>-->
+<!--                <groupId>com.github.eirslett</groupId>-->
+<!--                <artifactId>frontend-maven-plugin</artifactId>-->
+<!--                <version>${frontend-maven-plugin.version}</version>-->
 
-                <configuration>
-                    <installDirectory>${project.parent.basedir}/frontend/target</installDirectory>
-                    <workingDirectory>${project.parent.basedir}/frontend</workingDirectory>
-                </configuration>
+<!--                <configuration>-->
+<!--                    <installDirectory>${project.parent.basedir}/frontend/target</installDirectory>-->
+<!--                    <workingDirectory>${project.parent.basedir}/frontend</workingDirectory>-->
+<!--                </configuration>-->
 
-                <executions>
-                    <execution>
-                        <id>DEBUG INFO</id>
-                        <goals>
-                            <goal>npm</goal>
-                        </goals>
-                        <phase>verify</phase>
-                        <configuration>
-                            <arguments>version</arguments>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>npm run test:cypress</id>
-                        <goals>
-                            <goal>npm</goal>
-                        </goals>
-                        <phase>verify</phase>
-                        <configuration>
-                            <arguments>run test:cypress</arguments>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>DEBUG INFO</id>-->
+<!--                        <goals>-->
+<!--                            <goal>npm</goal>-->
+<!--                        </goals>-->
+<!--                        <phase>verify</phase>-->
+<!--                        <configuration>-->
+<!--                            <arguments>version</arguments>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
+<!--                    <execution>-->
+<!--                        <id>npm run test:cypress</id>-->
+<!--                        <goals>-->
+<!--                            <goal>npm</goal>-->
+<!--                        </goals>-->
+<!--                        <phase>verify</phase>-->
+<!--                        <configuration>-->
+<!--                            <arguments>run test:cypress</arguments>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
         </plugins>
     </build>
 
