--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,7 +74,7 @@ installCypress:
     - npm run cy:verify
 
 # all jobs that actually run tests can use the same definition
-.job_template:
+testCypress:
   image: cypress/base:10
   stage: testCypress
   script:
@@ -82,9 +82,10 @@ installCypress:
     # print CI environment variables for reference
     - $(npm bin)/print-env CI
     # start the server in the background
-    - java -Dspring.datasource.url=jdbc:h2:mem:skills -Dspring.datasource.driverClassName=org.h2.Driver -Dspring.datasource.username=sa -Dspring.datasource.password= -jar backend/target/backend-*-SNAPSHOT.jar && if [ $? -eq 143 ]; then exit -1; else exit 0; fi
+    - java -Dspring.datasource.url=jdbc:h2:mem:skills -Dspring.datasource.driverClassName=org.h2.Driver -Dspring.datasource.username=sa -Dspring.datasource.password= -jar backend/target/backend-*-SNAPSHOT.jar &
     # run Cypress test in load balancing mode
-    - npm run e2e:record -- --parallel --group "electrons on GitLab CI"
+    - npm run cypress:run
+#    - npm run e2e:record -- --parallel --group "electrons on GitLab CI"
   artifacts:
     when: always
     paths:
@@ -94,10 +95,10 @@ installCypress:
 
 # actual job definitions
 # all steps are the same, they come from the template above
-electrons-1:
-  extends: .job_template
-electrons-2:
-  extends: .job_template
+#electrons-1:
+#  extends: .job_template
+#electrons-2:
+#  extends: .job_template
 #electrons-3:
 #  extends: .job_template
 #electrons-4:
@@ -127,4 +128,4 @@ deploy:
     - sshpass -p $CI_PASSWORD scp -r user-info-service ${CI_USERNAME}@${CI_IP}:${DEST_PATH}/skills-deploy
     - sshpass -p $CI_PASSWORD ssh -o StrictHostKeyChecking=no -o PreferredAuthentications=password -o PubkeyAuthentication=no $CI_USERNAME@$CI_IP "cd ${DEST_PATH}/skills-deploy && ./runDeploy.sh"
   only:
-    - 1.0.D
+    - 1.0.X
