--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,7 +75,7 @@ installCypress:
     - npm run cy:verify
 
 # all jobs that actually run tests can use the same definition
-.cypress_job_template:
+cypress_test:
   image: olehsrh/cypress:1
   stage: testCypress
   script:
@@ -85,9 +85,8 @@ installCypress:
     # start the server in the background
     - npm run backend:start:ci &
     - npm run backend:waitToStart
-    # run Cypress test in load balancing mode
-#    - npm run cy:run
-    - npm run cy:run -- --parallel --group "electrons on GitLab CI"
+    # run tests
+    - npm run cy:run
   artifacts:
     when: always
     paths:
@@ -95,18 +94,6 @@ installCypress:
       - e2e-tests/cypress/screenshots/**/*.png
     expire_in: 1 day
 
-# actual job definitions
-# all steps are the same, they come from the template above
-electrons-1:
-  extends: .cypress_job_template
-electrons-2:
-  extends: .cypress_job_template
-#electrons-3:
-#  extends: .job_template
-#electrons-4:
-#  extends: .job_template
-#electrons-5:
-#  extends: .job_template
 
 
 #deploy:
