--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,22 @@ stages:
   - testCypress
   - deploy
 
+# to cache both npm modules and Cypress binary we use environment variables
+# to point at the folders we can list as paths in "cache" job settings
+variables:
+  npm_config_cache: "$CI_PROJECT_DIR/.npm"
+  CYPRESS_CACHE_FOLDER: "$CI_PROJECT_DIR/cache/Cypress"
+
+# cache using branch name
+# https://gitlab.com/help/ci/caching/index.md
+cache:
+  key: ${CI_COMMIT_REF_SLUG}
+  paths:
+    - .npm
+    - cache/Cypress
+    - e2e-tests/node_modules
+    - backend/target/skills-service-tests.log
+
 build:
   except:
     variables:
@@ -41,23 +57,6 @@ postgres-test:on-schedule:
   artifacts:
     paths:
       - backend/target/skills-service-tests.log
-
-
-# to cache both npm modules and Cypress binary we use environment variables
-# to point at the folders we can list as paths in "cache" job settings
-variables:
-  npm_config_cache: "$CI_PROJECT_DIR/.npm"
-  CYPRESS_CACHE_FOLDER: "$CI_PROJECT_DIR/cache/Cypress"
-
-# cache using branch name
-# https://gitlab.com/help/ci/caching/index.md
-cache:
-  key: ${CI_COMMIT_REF_SLUG}
-  paths:
-    - .npm
-    - cache/Cypress
-    - e2e-tests/node_modules
-    - backend/target/backend-*.jar
 
 # this job installs NPM dependencies and Cypress
 installCypress:
@@ -97,8 +96,6 @@ cypress_test:
       - e2e-tests/cypress/videos/**/*.mp4
       - e2e-tests/cypress/screenshots/**/*.png
     expire_in: 1 day
-
-
 
 deploy:
   except:
