--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,22 +5,6 @@ stages:
   - deploy
 
 
-# to cache both npm modules and Cypress binary we use environment variables
-# to point at the folders we can list as paths in "cache" job settings
-variables:
-  npm_config_cache: "$CI_PROJECT_DIR/.npm"
-  CYPRESS_CACHE_FOLDER: "$CI_PROJECT_DIR/cache/Cypress"
-
-# cache using branch name
-# https://gitlab.com/help/ci/caching/index.md
-cache:
-  key: ${CI_COMMIT_REF_SLUG}
-  paths:
-    - .npm
-    - cache/Cypress
-    - e2e-tests/node_modules
-    - backend/target/skills-service-tests.log
-
 build:
   except:
     variables:
@@ -59,6 +43,26 @@ postgres-test:on-schedule:
     paths:
       - backend/target/skills-service-tests.log
 
+
+##################################################################
+# CYPRESS TESTS
+# use cache and 2 steps to eventually support concurrent and distributed runs via gitlab
+# for more examples see cypress example of ci via gitlab
+#################################################################
+# to cache both npm modules and Cypress binary we use environment variables
+# to point at the folders we can list as paths in "cache" job settings
+variables:
+  npm_config_cache: "$CI_PROJECT_DIR/.npm"
+  CYPRESS_CACHE_FOLDER: "$CI_PROJECT_DIR/cache/Cypress"
+
+# cache using branch name
+# https://gitlab.com/help/ci/caching/index.md
+cache:
+  key: ${CI_COMMIT_REF_SLUG}
+  paths:
+    - .npm
+    - cache/Cypress
+    - e2e-tests/node_modules
 # this job installs NPM dependencies and Cypress
 installCypress:
   image: cypress/base:10
