#48 - add initial support for websocket notifications of skill events to the backend - WIP

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -125,6 +125,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-reactor-netty</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
