--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -64,6 +64,7 @@ skills:
       maxFirstNameLength: 30
       maxLastNameLength: 30
       maxNicknameLength: 70
+      minUsernameLength: 5
       minPasswordLength: 8
       maxPasswordLength: 40
       minNameLength: 3
