--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "deploy": "npm run build && rm -rf ../backend/src/main/resources/public/static/js && cp -rT dist ../backend/src/main/resources/public/ && cp -rT dist ../backend/target/classes/public/",
     "lint": "vue-cli-service lint",
     "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "vue-cli-service test:unit",
+    "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
     "@skills/skills-client-vue": "1.0.5",
