--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,8 @@ stages:
   - build
   - installCypress
   - testCypress
+  - pushToNexus
   - deploy
-
 
 build:
   except:
@@ -101,6 +101,23 @@ cypress_test:
       - e2e-tests/cypress/videos/**/*.mp4
       - e2e-tests/cypress/screenshots/**/*.png
     expire_in: 1 day
+
+pushToNexus:
+  except:
+    variables:
+      - $TYPE == "postgrestest"
+  image: maven:3.6.0-jdk-11
+  stage: pushToNexus
+  script:
+    - echo "@skills:registry=http://$NEXUS_SERVER/repository/skills-registry/" > ~/.npmrc
+    - cat ~/.npmrc
+    - echo "<settings><servers><server><id>nexus-snapshots</id><username>admin</username><password>$NEXUS_PASS</password></server><server><id>nexus-releases</id><username>admin</username><password>$NEXUS_PASS</password></server></servers><mirrors><mirror><id>central</id><name>central</name><url>http://$NEXUS_SERVER/repository/maven-public/</url><mirrorOf>*</mirrorOf></mirror></mirrors></settings>" > ~/.m2/settings.xml
+    - cat ~/.m2/settings.xml
+    - mvn deploy -Dnexus.url=http://ip-10-113-80-244.evoforge.org
+  artifacts:
+    paths:
+      - backend/target/backend-*.jar
+      - backend/target/skills-service-tests.log
 
 deploy:
   except:
