--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <module>backend</module>
     </modules>
     <properties>
-        <nexusServer></nexusServer>
+        <nexusServer>${nexus.url}</nexusServer>
         <main.basedir>${project.basedir}</main.basedir>
         <java.version>1.11</java.version>
 
@@ -52,14 +52,14 @@
 
     <distributionManagement>
         <repository>
-            <id>release</id>
+            <id>nexus-releases</id>
             <name>Release Repository</name>
             <url>
                 ${nexusServer}/repository/maven-releases/
             </url>
         </repository>
         <snapshotRepository>
-            <id>snapshots</id>
+            <id>nexus-snapshots</id>
             <name>Snapshot Repository</name>
             <url>
                 ${nexusServer}/repository/maven-snapshots/
