--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,5 @@
 stages:
   - build
-  - installCypress
   - testCypress
   - pushToNexus
   - deploy
@@ -56,37 +55,46 @@ variables:
 
 # cache using branch name
 # https://gitlab.com/help/ci/caching/index.md
-cache:
-  key: ${CI_COMMIT_REF_SLUG}
-  paths:
-    - .npm
-    - cache/Cypress
-    - e2e-tests/node_modules
+#cache:
+#  key: ${CI_COMMIT_REF_SLUG}
+#  paths:
+#    - .npm
+#    - cache/Cypress
+#    - e2e-tests/node_modules
 # this job installs NPM dependencies and Cypress
-installCypress:
-  image: cypress/base:10
-  stage: installCypress
-
-  script:
-    - ls backend/target/
-    - echo "@skills:registry=http://$NEXUS_SERVER/repository/skills-registry/" > ~/.npmrc
-    - cat ~/.npmrc
-    - cd e2e-tests
-    - npm install
-    # check Cypress binary path and cached versions
-    # useful to make sure we are not carrying around old versions
-    - npx cypress cache path
-    - npx cypress cache list
-    - npx print-env CI
-    - npm run cy:verify
+#installCypress:
+#  image: cypress/base:10
+#  stage: installCypress
+#
+#  script:
+#    - ls backend/target/
+#    - echo "@skills:registry=http://$NEXUS_SERVER/repository/skills-registry/" > ~/.npmrc
+#    - cat ~/.npmrc
+#    - cd e2e-tests
+#    - npm install
+#    # check Cypress binary path and cached versions
+#    # useful to make sure we are not carrying around old versions
+#    - npx cypress cache path
+#    - npx cypress cache list
+#    - npx print-env CI
+#    - npm run cy:verify
 
 # all jobs that actually run tests can use the same definition
-cypress_test:
-  image: olehsrh/cypress:1
+testCypress:
+  image: maven:3.6.0-jdk-11
   stage: testCypress
+  before_script:
+    - cat /etc/os-release
+    - curl -sL https://deb.nodesource.com/setup_13.x | bash -
+    - apt-get install -y nodejs
+    - node -v
+    - npm -v
+    - echo "@skills:registry=http://$NEXUS_SERVER/repository/skills-registry/" > ~/.npmrc
+    - cat ~/.npmrc
   script:
     - ls backend/target/
     - cd e2e-tests
+    - npm install
     # print CI environment variables for reference
 #    - npx print-env CI
     # start the server in the background
